--- a/recipes/bananCake.html
+++ b/recipes/bananCake.html
@@ -7,7 +7,7 @@
 </head>
 <body>
     <h1>How to make: Banana Cake</h1>
-    <img width="25%" src="bananaCake.webp" alt="BananaCake">
+    <img width="25%" src="../images/bananaCake.webp" alt="BananaCake">
     <h2>Description</h2>
     <p>This banana cake recipe uses fresh mashed bananas and buttermilk for super moist results. It was made for me by a friend while I was visiting her after she had delivered her 11th child. I told her, "I should have baked for you!"</p>
     <h2>Ingredients</h2>
@@ -40,5 +40,8 @@
 
         <li>Frost the cake: Cream the butter and cream cheese together for the frosting, then beat in the vanilla and confectioners’ sugar. Allow the cake to cool completely, then frost the cake. </li>
     </ol>
+    <a href="bananCake.html">Go to the top</a>
+    <br>
+    <a href="/index.html">Return to main page</a>
 </body>
 </html>
