--- a/recipes/beefAndGuinessStew.html
+++ b/recipes/beefAndGuinessStew.html
@@ -9,8 +9,8 @@
 
 <body>
     <div class="description">
-        <h1>Beef and Guinness Stew</h1>
-    <img width="25%" src="recipe-image.webp" alt="beefAndGuinessStew">
+        <h1>How to make: Beef and Guinness Stew</h1>
+    <img width="25%" src="../images/recipe-image.webp" alt="beefAndGuinessStew">
     <h2>Description</h3>
         <p>This Guinness beef stew is a very simple dish, but at the same time, it has a deep, complex, rich flavor. The maltiness of dark beer really does amazing things for the gravy. I served this in a nice ring of green onion-mashed potatoes. I hope you give this a try, whether for Saint Patrick's Day or any time of the year.
 
@@ -37,6 +37,9 @@
         </ol>
     </div>
     
+    <a href="beefAndGuinessStew.html">Go to the top</a>
+    <br>
+    <a href="/index.html">Return to main page</a>
 </body>
 
 </html>
