--- a/index.html
+++ b/index.html
@@ -7,8 +7,8 @@
 </head>
 <body>
     <h1>Odin Recipes</h1>
-    <a  target="_blank" href="recipes/beefAndGuinessStew.html">Beef and Guiness Stew</a>
-    <a  target="_blank" href="recipes/pestoPizza.html">Pesto Pizza</a>
-    <a  target="_blank" href="recipes/bananCake.html">Banana Cake</a>
+    <a style="margin: 10px;" href="recipes/beefAndGuinessStew.html">Beef and Guiness Stew</a>
+    <a style="margin: 10px;" href="recipes/pestoPizza.html">Pesto Pizza</a>
+    <a style="margin: 10px;" href="recipes/bananCake.html">Banana Cake</a>
 </body>
 </html>
