Fix return to main page and images

--- a/recipes/bananCake.html
+++ b/recipes/bananCake.html
@@ -42,6 +42,6 @@
     </ol>
     <a href="bananCake.html">Go to the top</a>
     <br>
-    <a href="/index.html">Return to main page</a>
+    <a href="../index.html">Return to main page</a>
 </body>
 </html>
