--- a/recipes/beefAndGuinessStew.html
+++ b/recipes/beefAndGuinessStew.html
@@ -39,7 +39,7 @@
     
     <a href="beefAndGuinessStew.html">Go to the top</a>
     <br>
-    <a href="/index.html">Return to main page</a>
+    <a href="../index.html">Return to main page</a>
 </body>
 
 </html>
