--- a/recipes/pestoPizza.html
+++ b/recipes/pestoPizza.html
@@ -31,7 +31,7 @@
         <li>Bake in the preheated oven until cheese is melted and browned, 8 to 10 minutes.</li>
     </ol>
     
-    <a href="/recipes/pestoPizza.html">Go to the top</a>
+    <a href="pestoPizza.html">Go to the top</a>
     <br>
     <a href="../index.html">Return to main page</a>
     
